--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^2.24.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.15.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
