--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.15.3
   provider: ^6.1.1
   dio: ^5.4.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
